[package]
authors = ["The Veil Link Server Developers"]
name = "veil_link_server"
description = "Privacy centered Veil blockchain server"
homepage = "..."
repository = "..."
keywords = ["bitcoin", "ethereum", "veil", "cryptocurrency"]
license = "BSD-3-Clause"
version = "0.1.0"
publish = false
edition = "2018"

[[bin]]
name = "link_server"
path = "src/bin/link_server.rs"

[dependencies]
clap = "~2.33.0"
dirs = "~2.0.2"
num_cpus = "~1.11.1"
quiche = "~0.2.0"
rocksdb = "~0.13.0"
serde_json = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
toml = "~0.5.5"
mimir_net = { path = "../libnet"}
veil = { path = "../libveil" }
veil_core_rpc = { path = "../libcore_rpc_client" }